snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-sources.jar.sha512
3cd0fb65db0f5cb567121389b3be3e3b980fdd4c84d3fb1c3da494075a470fb245cb6f5a48d19769a43a6d73a2778bc1252252a0c8a98c1555a970a6f07e214d